# Ray-Peat

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  Procfile  README.md  pyproject.toml
data/knowledge/: ray_peat_rules.yaml
docs/: connectors.md
examples/: galletas_aceite_girasol.json  sample_product.json
src/peat_product_scorer/: __init__.py  cli.py  knowledge_base.py  models.py  nutrition.py  scorer.py  web_app.py
src/peat_product_scorer/static/: app.js  index.html  styles.css
src/peat_product_scorer/supermarkets/: __init__.py  adapters.py  fetcher.py  parser.py
tests/: test_nutrition.py  test_scoring.py  test_supermarket_standardization.py  test_web_app.py
