[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ray-peat-product-scorer"
version = "0.1.0"
description = "Extract Spanish supermarket nutrition data and score products using a Ray Peat-inspired knowledge base."
requires-python = ">=3.10"
dependencies = [
  "beautifulsoup4>=4.12",
  "fastapi>=0.111",
  "pydantic>=2.7",
  "PyYAML>=6.0",
  "requests>=2.32",
  "rich>=13.7",
  "typer>=0.12",
  "uvicorn[standard]>=0.30",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.5",
]

[project.scripts]
peat-score = "peat_product_scorer.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
peat_product_scorer = ["static/*"]

[tool.ruff]
line-length = 100
target-version = "py310"
